--- a/hyangTGD/base.css
+++ b/hyangTGD/base.css
@@ -1,6 +1,13 @@
 @charset "UTF-8";
  
-/* 적용용 CSS @import url("https://raw.githubusercontent.com/explainpark101/hyangTGD/main/sample.css");
+/* 적용용 CSS 
+@import url("https://explainpark101.github.io/hyangTGD/sample.css");
+@font-face {
+  font-family: 'ChosunKm';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ChosunKm.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
  */
 /* made by 박설명(explain_park) */
 /*내용 */
