--- a/hyangTGD/base.css
+++ b/hyangTGD/base.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
  
 /* 적용용 CSS 
-@import url("https://explainpark101.github.io/hyangTGD/sample.css");
+@import url("https://explainpark101.github.io/hyangTGD/hyangTGD/base.css");
 @font-face {
   font-family: 'ChosunKm';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ChosunKm.woff') format('woff');
