--- a/hyangTGD/base.css
+++ b/hyangTGD/base.css
@@ -56,10 +56,10 @@ body {
   background-image: url('https://explainpark101.github.io/hyangTGD/snow/snow1.png'),
                     url('https://explainpark101.github.io/hyangTGD/snow/snow2.png'),
                     url('https://explainpark101.github.io/hyangTGD/snow/snow3.png');
-  -webkit-animation: snow 10s linear infinite;
-  -moz-animation: snow 10s linear infinite;
-  -ms-animation: snow 10s linear infinite;
-  animation: snow 10s linear infinite;
+  -webkit-animation: snow 30s linear infinite;
+  -moz-animation: snow 30s linear infinite;
+  -ms-animation: snow 30s linear infinite;
+  animation: snow 30s linear infinite;
 }
 /* 트게더 로고 변경 */
 header .row > div:nth-child(1) > a {
@@ -182,6 +182,7 @@ element.style {
 /* 메인 글 테두리 색상 */
 #main #main-content>div.frame{
   border-radius: 10px;
+  border: 2px solid var(--forth-color);
 }
 /*프로필*/
 #board-info{
